<resources>
    <string name="app_name">EDF COMPTEUR</string>
    <string name="textviewprenomclient">TextViewPrenomClient</string>
    <string name="textviewnomclient">TextViewNomClient</string>
    <string name="action_1">Ajouter Compteur</string>
    <string name="action_2">Relever Compteur</string>
    <string name="secondary_text">Nom Client</string>
    <string name="supporting_text">Prenom Client</string>
    <string name="addr_text">Adresse Client</string>
    <string name="codePostal_text">Code Postal Client</string>
    <string name="ville_text">Ville Client</string>
    <string name="add_word">Ajouter mot</string>
    <string name="EDF">EDF</string>
    <string name="Identification">Identification</string>
    <string name="Client">Client</string>
    <string name="ReleveCompteur">ReleveCompteur</string>
    <string name="Transfert">Transfert</string>
    <string name="Sauvegarde">Sauvegarde</string>
    <string name="ImportDonnees">ImportDonnees</string>
</resources>